convert margin-bottom to a transparent border-bottom to avoid firefox white space bug

--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -3,10 +3,11 @@
 // Tables
 @mixin vf-b-tables {
   table {
-    border: 0;
+    border: 0 0 $spv-outer--scaleable 0;
+    border-bottom-color: transparent;
+    border-bottom-style: solid;
     border-collapse: collapse;
     line-height: map-get($line-heights, default-text);
-    margin-bottom: $spv-outer--scaleable;
     overflow-x: auto;
     width: 100%;
 
